--- a/styles/themes/webowe-pogawedki/main.css
+++ b/styles/themes/webowe-pogawedki/main.css
@@ -4,7 +4,7 @@
 }
 
 .remark-slide-content {
-    background-image: url('../../../images/webowe-pogawedki/Plain.png');
+    background-image: url('../../../images/general/Plain.png');
 }
 
 .remark-slide-content img {
