--- a/styles/screen.css
+++ b/styles/screen.css
@@ -179,3 +179,10 @@ kbd {
 .line-height-2x li {
     line-height: 2em;
 }
+
+.master-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%
+}
