--- a/styles/themes/webowe-pogawedki/main.css
+++ b/styles/themes/webowe-pogawedki/main.css
@@ -42,9 +42,10 @@
 }
 
 .slide-ruda h1 {
-    text-align: center;
+    font-family: Ruda, sans-serif;
     font-size: 106px !important;
     font-weight: normal;
+    text-align: center;
     margin: 508px 0 0 0;
 }
 
